--- a/pom.xml
+++ b/pom.xml
@@ -64,6 +64,20 @@
     		<groupId>org.springframework.boot</groupId>
     		<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
+
+		<dependency>
+    		<groupId>org.projectlombok</groupId>
+    		<artifactId>lombok</artifactId>
+    		<version>1.18.30</version> <!-- Verifique a versão mais recente -->
+    		<scope>provided</scope>
+		</dependency>
+
+		<dependency>
+    		<groupId>org.projectlombok</groupId>
+    		<artifactId>lombok-mapstruct-binding</artifactId>
+    		<version>0.2.0</version> <!-- Verifique a versão mais recente -->
+		</dependency>
+
 	</dependencies>
 
 	<build>
